PSoC 5LP CY8CKIT-101.cydsn/REBUILD.log
--------------- Rebuild Started: 01/07/2025 15:13:23 Project: DACWork.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_541\Debug/DACWork.lst -g -Wall -ffunction-sections -ffat-lto-objects -O0 -c DACWork.c -o .\ARM_GCC_541\Debug\DACWork.o
In file included from DACWork.c:1:0:
DACWork.h:12:5: error: unknown type name 'bool'
     bool active;               // 鏄惁澶勪簬娲诲姩鐘舵€?
     ^
DACWork.c: In function 'InitSynthChannels':
DACWork.c:80:49: error: 'false' undeclared (first use in this function)
             synthChannels[ch].notes[n].active = false;
                                                 ^
DACWork.c:80:49: note: each undeclared identifier is reported only once for each function it appears in
DACWork.c: At top level:
DACWork.c:84:1: error: unknown type name 'bool'
 bool addNote(int channel, const uint8_t (*noteData)[50])
 ^
DACWork.c: In function 'addNote':
DACWork.c:88:16: error: 'false' undeclared (first use in this function)
         return false; // 鏃犳晥鐨勯€氶亾
                ^
DACWork.c:98:35: error: 'true' undeclared (first use in this function)
             ch->notes[n].active = true;
                                   ^
DACWork.c: At top level:
DACWork.c:105:1: error: unknown type name 'bool'
 bool removeNote(int channel, int noteIndex)
 ^
DACWork.c: In function 'removeNote':
DACWork.c:109:16: error: 'false' undeclared (first use in this function)
         return false; // 鏃犳晥鐨勯€氶亾鎴栭煶绗︾储寮?
                ^
DACWork.c:118:16: error: 'true' undeclared (first use in this function)
         return true; // 鎴愬姛鍒犻櫎
                ^
DACWork.c: In function 'addNote':
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
DACWork.c:103:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
DACWork.c: In function 'removeNote':
DACWork.c:121:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
--------------- Rebuild Failed: 01/07/2025 15:13:23 ---------------
